[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"

[lib]
name = "advent_of_code_2024"
path = "aoc-2024/lib.rs"

[[bin]]
name = "aoc-2024"
path = "aoc-2024/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.12.0"
regex = "1.11.1"
